# tencent_im_rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: api.rs  lib.rs  user_sig.rs
src/api/: v4.rs
src/api/v4/: all_member_push.rs  common.rs  config_svc.rs  group_open_attr_http_svc.rs  group_open_http_svc.rs  im_open_login_svc.rs  open_config_svr.rs  open_im.rs  open_msg_svc.rs  profile.rs  recent_contact.rs  sns.rs
src/api/v4/all_member_push/: im_add_tag.rs  im_get_attr.rs  im_get_attr_name.rs  im_get_tag.rs  im_push.rs  im_remove_all_tags.rs  im_remove_attr.rs  im_remove_tag.rs  im_set_attr.rs  im_set_attr_name.rs
src/api/v4/common/: account_status.rs  action_status.rs  android.rs  apns.rs  app_info.rs  apply_join_option.rs  assist_flag.rs  attribute_name.rs  black_list_relation_type.rs  black_list_verify_type.rs  complete_flag.rs  condition.rs  connect_state.rs  contact_item.rs  contact_opt_type.rs  conversation_type.rs  error_code.rs  forbid_callback.rs  friend_add_type.rs  friend_check_type.rs  friend_delete_type.rs  friend_relation_type.rs  group.rs  group_counter.rs  group_counter_mode.rs  group_item.rs  group_type.rs  image_format.rs  image_info.rs  image_type.rs  key_value.rs  mark_opt_type.rs  member.rs  member_role.rs  msg.rs  msg_body.rs  msg_content.rs  msg_flag.rs  msg_priority.rs  offline_push.rs  (+13 more)
src/api/v4/config_svc/: get_ip_list.rs
src/api/v4/group_open_attr_http_svc/: get_group_attr.rs
src/api/v4/group_open_http_svc/: add_group_member.rs  ban_group_member.rs  change_group_owner.rs  clear_group_attr.rs  create_group.rs  delete_group_counter.rs  delete_group_member.rs  delete_group_msg_by_sender.rs  destroy_group.rs  forbid_send_msg.rs  get_appid_group_list.rs  get_group_ban_member.rs  get_group_counter.rs  get_group_info.rs  get_group_member_info.rs  get_group_muted_account.rs  get_joined_group_list.rs  get_online_member_num.rs  get_role_in_group.rs  (+15 more)
src/user_sig/: hmac_sha256.rs
(+44 files in other folders)
