[package]
name = "tencent_im_rs"
version = "1.0.3"
edition = "2021"
authors = ["poohpooher <poohpooher@gmail.com>"]
description = "A Tencent IM Rest API for Rust"
license = "MIT"
repository = "https://github.com/poohpooher/tencent_im_rs"
documentation = "https://docs.rs/tencent_im_rs/latest/tencent_im_rs/"

[lib]
crate-type = ["lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
bitflags = "2.4.2"
bitflags_serde_shim = "0.2.4"
flate2 = "1.0.28"
hmac = "0.12.1"
log = "0.4.20"
paste = "1.0.14"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.18"
serde_with = "3.4.0"
sha2 = "0.10.8"
strum_macros = "0.25.3"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["rt", "macros"] }
